Fixes button upload text alignment to center
Removes snapshot icon from modal dialog

--- a/packages/labbook/src/components/upload-button.scss
+++ b/packages/labbook/src/components/upload-button.scss
@@ -51,3 +51,7 @@
   }
 }
 
+.upload-button > div {
+  text-align: center;
+}
+
